add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/qml)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/qtwidget)

set(DESIGN_TOKENS_IMPORTER_SOURCES ${DESIGN_TOKENS_IMPORTER_SOURCES}
        ${CMAKE_CURRENT_SOURCE_DIR}/Types.h
	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Utilities.h	
	${CMAKE_CURRENT_SOURCE_DIR}/Utilities.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/TokenManager.h	
	${CMAKE_CURRENT_SOURCE_DIR}/TokenManager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/UIHandler.h	
	${CMAKE_CURRENT_SOURCE_DIR}/UIHandler.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PathProvider.h	
	${CMAKE_CURRENT_SOURCE_DIR}/PathProvider.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/StylesheetParser.h	
	${CMAKE_CURRENT_SOURCE_DIR}/StylesheetParser.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/IThemeGenerator.h
		
	PARENT_SCOPE
)

set(INCLUDE_DIRECTORIES ${INCLUDE_DIRECTORIES}
    ${CMAKE_CURRENT_SOURCE_DIR}

    PARENT_SCOPE
)
