add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/qml)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/widgets)

set(DESIGN_TOKENS_IMPORTER_HEADERS ${DESIGN_TOKENS_IMPORTER_HEADERS}
    ${CMAKE_CURRENT_SOURCE_DIR}/DesignTarget.h
    ${CMAKE_CURRENT_SOURCE_DIR}/DesignTargetFactory.h

    PARENT_SCOPE
)

set(DESIGN_TOKENS_IMPORTER_SOURCES ${DESIGN_TOKENS_IMPORTER_SOURCES}

    PARENT_SCOPE
)

set(INCLUDE_DIRECTORIES ${INCLUDE_DIRECTORIES}
    ${CMAKE_CURRENT_SOURCE_DIR}

    PARENT_SCOPE
)
